# G3SDK

./: .gitignore  CMakeLists.txt  G3Dll.bat  G3DllUndo.bat  GhidraDataTypes.gdt  README.md  dll2lib.bat
detours/: CMakeLists.txt
detours/lib/: detours.lib  syelog.lib
extra-resources/: Engine.dll.export.txt  Engine.dll.import.txt  Engine.dll.txt  FileSystem.dll.txt  GFC.dll.txt  GUI.dll.txt  Game.dll.txt  Gothic3.exe.txt  Importer.dll.txt  Script.dll.txt  SharedBase.dll.txt  demangle.py
extra-resources/unused/: Exporter.dll.txt  SCM.dll.txt
ghidra/ghidra/Ghidra/: application.properties
ghidra/ghidra/Ghidra/Features/Decompiler/os/linux_x86_64/: decompile  sleigh
ghidra/ghidra/Ghidra/Features/Decompiler/os/mac_arm_64/: decompile  sleigh
ghidra/ghidra/Ghidra/Features/Decompiler/os/mac_x86_64/: decompile  sleigh
ghidra/ghidra/Ghidra/Processors/MC6800/data/languages/: 6809.sla  H6309.sla
ghidra/ghidra/support/: dbgengGADPServerRun.bat  dbgmodelGADPServerRun.bat  launch.bat
include/: Engine.dll.h  commontypes.h  formatters.h  framework.h  map.h  old.h  pch.h  types.h
loader/: CMakeLists.txt  main.cpp
src/: dllmain.cpp  framework.cpp
xmot/: CMakeLists.txt  Dragon_Stand_None_Cast_P0_Cast_Hit_N_Fwd_00_%_00_P0_0.xmot  G3-Dev.bat  G3_Hero_Body_Paladin.3db  G3_Hero_Body_Player.3db  G3_Hero_Body_Player.xact  G3_Hero_Head_Player.xact  G3_Hero_Head_Thorus.3db  Hero_Parade_1H_1H_P0_PierceAttack_Raise_N_Fwd_00_%_00_P0_0_F.xmot  Hero_Parade_1H_1H_P1_PierceAttack_Hit_N_Fwd_00_%_00_P1_50_F.xmot  Hero_Parade_None_1H_P0_Ambient_Loop_N_Fwd_00_%_00_P0_0.xmot  Hero_Parade_None_Fist_P0_Move_Walk_N_Fwd_00_%_00_P0_350.xmot  Hero_Stand_None_None_P0_Ambient_Loop_N_Fwd_02_%_00_P0_0.xmot  Hero_Stand_None_Smoke_P0_Ambient_Loop_N_Fwd_00_%_00_P0_0.xmot  Hero_Stand_None_Tool_P0_SawLog_Ambient_N_Fwd_00_%_00_P0_0.xmot  animation_researching_xentax.htm  binary.fbx  blenderplugin.py  bvh-test.py  bvh.py  fconv.py  minimal_animation.json  piercehit.json  player.3ds  player.blend  player.dae  playerambient.xmot.json  test.cpp  test.xmot  untitled-modified.bvh  untitled.bvh  untitled.fbx  xact-test.py  xact.json  xact.py  xmot-edit.json  xmot-test.py  xmot.json  xmot.py
xmot/Blender/: __init__.py  binaryfile.py  chunks.py  filetime.py  import_xmot.py  xact.py  xmot.py
xmot/Risen/: Hero_Stand_None_1H_S0_AttackRight_01_N_Fwd_00_%_00_P0_0._xmot
xmot/dragon2/: Dragon_Stand_None_Cast_P0_Cast_Raise_N_Fwd_00_%_00_P0_0.xmot  Dragon_Stand_None_Cast_P0_PowerCast_Raise_N_Fwd_00_%_00_P0_0.xmot
xmot/g3dit_1.11.4/cache/: EntityCache.cache  NavCache.cache  TemplateCache.cache
xmot/g3dit_1.11.4/config/: g3dit.json
xmot/io_scene_3db/: __init__.py  export_3db.py  import_3db.py
xmot/king/: G3_Hero_Body_King.3db  G3_Hero_Body_King.3ds  G3_Hero_Body_King.asc  G3_Hero_Body_King.xact  G3_Human_King_Body_Diffuse_S1.tga  Hero_Stand_None_None_P0_OpenDoor_End_N_Back_00_%_00_P0_0.xmot  king.blend  king.blend1
